# job_skills

./: .gitignore  01_report.md  01_research.md  02_report.md  02_research.md  03_instructions.md  03_skills_guide.md  LICENSE  README.md  main.py  pyproject.toml  report.md  requirements.txt
_notes/: _setup.txt
db/: chroma.sqlite3
job_skills/: 01_research.md  03_skills_guide.md  README.md  pyproject.toml  report.md
job_skills/knowledge/: user_preference.txt
job_skills/tests/: test_perplexity_api.py  test_perplexity_tool.py  test_skills_csv_tool.py
knowledge/: user_preference.txt
logs/test_results/: howdoi_enhanced_test_results_20250406_114105.txt  howdoi_enhanced_test_results_20250406_121019.txt  howdoi_enhanced_test_results_20250406_122048.txt  howdoi_test_results_20250406_113520.txt  howdoi_test_results_20250406_121335.txt
output/: skill_analysis.csv
output/debug/: IMG_6751.PNG.txt  IMG_6753.PNG.txt  IMG_6754.PNG.txt  IMG_6755.PNG.txt  IMG_6757.PNG.txt  IMG_6759.PNG.txt  IMG_6760.PNG.txt  IMG_6761.PNG.txt  IMG_6762.PNG.txt  IMG_6764.PNG.txt  IMG_6765.PNG.txt  IMG_6766.PNG.txt  IMG_6774.PNG.txt  IMG_6775.PNG.txt  IMG_6776.PNG.txt  IMG_6777.PNG.txt  IMG_6787.PNG.txt  IMG_6788.PNG.txt  IMG_6789.PNG.txt  IMG_6824.PNG.txt  IMG_6826.PNG.txt  IMG_6871.PNG.txt  IMG_6872.PNG.txt  IMG_6876.PNG.txt  IMG_6877.PNG.txt  (+69 more)
src/: image_ocr.py
tests/: find_csv_file.py  test_howdoi_tool.py  test_howdoi_tool_enhanced.py  test_howdoi_tool_queries.py  test_perplexity_llm.py  test_serper_tool.py  test_serper_tool_kg.py  test_web_scraper_tool_real.py  test_wikipedia_tool.py
(+315 files in other folders)
